--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref" : "/eventbrite-flyer/",
+            "deployUrl": "/eventbrite-flyer/",
             "outputPath": "dist/eventbrite-flyer",
             "index": "src/index.html",
             "main": "src/main.ts",
